--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,
+    maxinimum-scale=1.0,mixnimum-scale=1.0,user-scalable=no"/>
     <title>vue2_project</title>
+    <link rel="stylesheet" href="static/css/reset.css">
   </head>
   <body>
     <div id="app"></div>
